init fe-app, add nast,  fix server data problem

--- a/nats.conf
+++ b/nats.conf
@@ -11,7 +11,7 @@ websocket {
   same_origin: false
   
   # CORS headers for browser compatibility
-  allowed_origins: ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080"]
+  # allowed_origins: ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080"]
   
   # WebSocket specific timeouts
   handshake_timeout: "2s"
