--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "nats.ws": "^1.30.3",
     "vue": "^3.5.18",
-    "zustand": "^5.0.8"
+    "vue-router": "^4.5.1",
+    "zustand-vue": "^1.0.0-beta.24"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -32,6 +33,7 @@
     "jiti": "^2.4.2",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
+    "sass": "^1.93.2",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
